[package]
readme = "../README.md"
name = "azul-css"
version = "0.0.8"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    Common datatypes used for styling applications
    using the Azul desktop GUI framework
'''
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2021"
resolver = "2"
autoexamples = false

[dependencies]
libm = { version = "0.2.2", default-features = false }
azul-simplecss = { version = "0.2.0", default-features = false, optional = true }

[features]
default = ["parser"]

# CSS parser support (azul-simplecss)
parser = ["dep:azul-simplecss"]
