[package]
name = "azul-dll"
version = "0.0.7"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MPL-2.0"
description = "C-API of Azul GUI"
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2021"
autoexamples = false
build = "build.rs"

[lib]
name = "azul"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Core crates - only needed for build-dll and link-static, NOT for link-dynamic
azul-core = { path = "../core", version = "0.0.7", default-features = false, optional = true }
azul-css = { path = "../css", version = "0.0.7", default-features = false, optional = true }
azul-layout = { path = "../layout", version = "0.0.7", default-features = false, features = ["font_loading", "text_layout", "svg", "xml", "cpurender"], optional = true }

# Logging
log = { version = "0.4.17", default-features = false, optional = true }
fern = { version = "0.7.1", default-features = false, optional = true }
backtrace = { version = "0.3.66", optional = true }

# Python bindings
pyo3 = { version = "0.27.1", default-features = false, features = ["abi3", "multiple-pymethods", "extension-module", "macros", "auto-initialize"], optional = true }
pyo3-log = { version = "0.13.2", default-features = false, optional = true }

# PHP bindings (Zend engine extension via ext-php-rs)
# Used by feature `php-extension`. Provides closure-to-fnpointer
# support that standard php-ffi rejects, lifting the host-invoker
# blocker for the PHP example.
ext-php-rs = { version = "0.15", default-features = false, optional = true }

# Desktop windowing dependencies
tfd = { version = "0.1.0", default-features = false, optional = true }
rust-fontconfig = { version = "4.2.1", default-features = false, features = ["std", "parsing", "async-registry", "cache"], optional = true }
gl-context-loader = { version ="0.1.8", default-features = false, optional = true }
webrender = { path = "../webrender/core", default-features = false, optional = true }
once_cell = { version = "1.17.1", optional = true }
bitflags = { version = "2.8.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Accessibility
accesskit = { version = "0.24", default-features = false, optional = true }

# PNG encoding for screenshots
png = { version = "0.18", default-features = false, optional = true }

# Windows-only: libm for math functions
libm = { version = "0.2.2", default-features = false, optional = true }

# Enum iteration for debug server
strum = { version = "0.28", default-features = false, optional = true }

# SPMC channel for debug server → window timer communication
spmc = { version = "0.3", optional = true }

cfg-if = { version = "1.0", optional = true }

# Brotli decompression for embedded compressed assets (web backend api.json)
brotli-decompressor = { version = "5", default-features = false, features = ["std"], optional = true }

# Custom allocators — use these to aggressively return freed pages to the OS.
# Thanks to the C API boundary, the azul library can use a different allocator
# than the binary linking against it, so enabling these only affects azul's
# internal allocations.
mimalloc = { version = "0.1", default-features = false, optional = true }
tikv-jemallocator = { version = "0.6", default-features = false, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", optional = true }
x11-clipboard = { version = "0.9.3", optional = true }
accesskit_unix = { version = "0.21", optional = true }

[target.'cfg(any(target_os = "ios"))'.dependencies]
objc = { version = "0.2", optional = true }
objc-foundation = { version = "0.1", optional = true }
objc_id = { version = "0.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", optional = true, default-features = false, features = [
    "windowsx",
    "libloaderapi",
    "errhandlingapi",
    "winuser",
    "uxtheme",
    "dwmapi",
    "wingdi",
    "commdlg",
    "winerror",
] }
clipboard-win = { version = "5.4", optional = true }
accesskit_windows = { version = "0.32", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cgl = { version = "0.3.2", optional = true }
dispatch2 = { version = "0.3.0", default-features = false, features = ["std", "objc2"], optional = true }
objc2 = { version = "0.6.0", optional = true }
objc = { version = "0.2", optional = true }
objc-foundation = { version = "0.1", optional = true }
objc_id = { version = "0.1", optional = true }
block2 = { version = "0.6.0", optional = true }
libloading = { version = "0.8.6", optional = true }
accesskit_macos = { version = "0.26", optional = true }
objc2-core-foundation = { version = "0.3.0", default-features = true, optional = true, features = [
    "std",
    "CFBase",
    "CFString",
    "CFBundle",
] }
objc2-foundation = { version = "0.3.0", default-features = true, optional = true, features = [
    "std",
    "NSArray",
    "NSThread",
] }
objc2-app-kit = { version = "0.3.0", default-features = true, optional = true, features = [
    "std",
    "objc2-core-foundation",
    "NSApplication",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
    "NSTextInputClient",
    "NSTextInputContext",
    "NSView",
    "NSWindow",
    "NSOpenGL",
    "NSOpenGLView",
] }

[build-dependencies]
brotli = "8"

# =============================================================================
# Features
# =============================================================================

[features]
# Default: Build with static linking (for Rust applications)
# Use --features "build-dll" when building the shared library itself
default = [
    "std",
    "link-static",
    "logging",
    "a11y",
    "all_img_formats",
]

# -----------------------------------------------------------------------------
# Codegen Block Features (granular — each gates a generated include!() file)
# -----------------------------------------------------------------------------

# Internal C-ABI bindings: types + function bodies via transmute
# Uses: target/codegen/dll_api_internal.rs
# Requires the full azul stack (azul-core, azul-css, azul-layout)
cabi_internal = []

# Export C-ABI symbols with #[no_mangle] (for dlsym / C/C++/Python FFI)
# Implies cabi_internal. Also includes trait functions (_delete, _deepCopy, etc.)
# Needed by: build-dll (shared library), link-static + web (remill dlsym)
cabi_export = ["cabi_internal"]

# External C-ABI declarations: extern "C" { ... } for dynamic linking
# Uses: target/codegen/dll_api_external.rs
# Does NOT require azul-core or other internal crates
cabi_external = []

# Public Rust API re-exports (azul::dom::Dom, azul::app::App, etc.)
# Uses: target/codegen/reexports.rs
rust_api = []

# -----------------------------------------------------------------------------
# Build Modes
# -----------------------------------------------------------------------------

# Build the full desktop DLL with windowing, OpenGL, fonts, etc.
# This compiles all the platform-specific code in src/desktop/
# Exports C-ABI symbols with #[no_mangle] for use from C/C++/Python
build-dll = [
    "cabi_export",
    "rust_api",
    "_internal_deps",
    "font_loading_multithreaded",
    "font_async_registry",
]

# -----------------------------------------------------------------------------
# Link Modes (for consumers of the library)
# -----------------------------------------------------------------------------

# Static linking: C-ABI function bodies + #[no_mangle] exports
# Uses: target/codegen/dll_api_internal.rs (with #[no_mangle] via cabi_export)
# Requires the full azul stack to be compiled in
# NOTE: link-static now exports C-ABI symbols (same as build-dll) so that
# remill can discover function names via dlsym when AZ_BACKEND=web is used.
# Trait impls also route through C-ABI functions (not raw transmute) so that
# the call graph is visible to the x86→WASM lifter.
link-static = [
    "cabi_export",
    "rust_api",
    "_internal_deps",
]

# Dynamic linking: Include extern "C" declarations
# Uses: target/codegen/dll_api_external.rs
# Requires libazul.dylib/so/dll to be available at runtime
# Set AZUL_LINK_PATH environment variable to the directory containing libazul
# NOTE: Does NOT require azul-core or other internal crates
link-dynamic = [
    "cabi_external",
    "rust_api",
]

# Shared dependencies for build-dll and link-static (not user-facing)
_internal_deps = [
    "std",
    "azul-core",
    "azul-css",
    "azul-layout",
    # AZ_PROFILE=cpu per-phase timings — per-span overhead is tiny
    # (Instant::now + thread-local Vec push on Drop). Always-on in the
    # DLL so live apps can opt into profiling at run time, no rebuild.
    "azul-layout?/probe",
    "cpurender",
    "tfd",
    "rust-fontconfig",
    "gl-context-loader",
    "webrender",
    "once_cell",
    "bitflags",
    "serde",
    "serde_json",
    "serde-json",
    "backtrace",
    "font_loading",
    "text_layout",
    "svg",
    "xml",
    "strum",
    "spmc",
    "dep:png",
    # Platform-specific clipboard
    "x11-clipboard",
    "clipboard-win",
    # Windows needs libm
    "libm",
    # ICU backends: each platform picks the best one via cfg conditions.
    # macOS  → icu_macos  (Foundation, no data blobs)
    # Windows → icu_windows (Win32 NLS, no data blobs)
    # Linux  → icu        (ICU4X, data blobs — no system alternative)
    "icu",
    "icu_macos",
    "icu_windows",
    # Fluent localization support
    "fluent",
    # HTTP client support (pulls in ring via rustls — requires C compiler for cross-compilation)
    "http",
    # ZIP file manipulation
    "zip_support",
    # JSON support
    "json",
    # Icon provider support
    "icons",
    # Platform-specific deps (optional, only linked on matching OS)
    "cfg-if",
    "cgl",
    "dispatch2",
    "objc2",
    "objc",
    "objc-foundation",
    "objc_id",
    "block2",
    "libloading",
    "objc2-core-foundation",
    "objc2-foundation",
    "objc2-app-kit",
    "libc",
    "winapi",
]

# -----------------------------------------------------------------------------
# Core Features
# -----------------------------------------------------------------------------

# NOTE: std feature only affects azul-core/layout when they are enabled via build-dll or link-static
# For link-dynamic, std has no effect since those crates aren't included
std = ["azul-core?/std", "azul-layout?/std"]
logging = ["log"]

# Memory allocator features — set the global allocator inside the azul DLL.
# Since azul exposes a C API, the allocator only affects azul's internal
# allocations. The host application keeps its own allocator.
# These are mutually exclusive; enabling both is a compile error.
allocator_mimalloc = ["dep:mimalloc"]
allocator_jemalloc = ["dep:tikv-jemallocator"]

# Web backend: serve the app as HTML over HTTP (AZ_BACKEND=web://ip:port)
# Phase 0: no external dependencies (uses std::net::TcpListener).
# Phase 1+: will add remill-rs, wasm-encoder as optional deps.
# Can be combined with link-static (Rust app) or used standalone (C binary).
web = [
    "azul-core",
    "azul-css",
    "azul-layout",
    "rust-fontconfig",
    "serde_json",
    "brotli-decompressor",
]

# -----------------------------------------------------------------------------
# Accessibility
# -----------------------------------------------------------------------------

a11y = [
    "accesskit",
    "azul-layout/a11y",
    "accesskit_windows",
    "accesskit_macos",
    "accesskit_unix",
]

# -----------------------------------------------------------------------------
# Image Formats
# -----------------------------------------------------------------------------

all_img_formats = ["ico", "tga", "hdr", "jpeg", "webp", "pnm", "gif", "png", "tiff", "bmp"]
gif = ["azul-layout", "azul-layout/gif"]
jpeg = ["azul-layout", "azul-layout/jpeg"]
png = ["azul-layout", "azul-layout/png"]
tiff = ["azul-layout", "azul-layout/tiff"]
bmp = ["azul-layout", "azul-layout/bmp"]
ico = ["azul-layout", "azul-layout/ico"]
tga = ["azul-layout", "azul-layout/tga"]
hdr = ["azul-layout", "azul-layout/hdr"]
webp = ["azul-layout", "azul-layout/webp"]
pnm = ["azul-layout", "azul-layout/pnm"]

# -----------------------------------------------------------------------------
# Layout Features
# -----------------------------------------------------------------------------

svg = ["azul-layout", "azul-layout/svg"]
xml = ["azul-layout", "azul-layout/xml"]
cpurender = ["azul-layout", "azul-layout/cpurender"]
font_loading = ["azul-layout", "azul-layout/font_loading"]
font_loading_multithreaded = ["font_loading", "azul-layout/font_loading_multithreaded"]
font_async_registry = ["font_loading", "azul-layout/font_async_registry"]
text_layout = ["azul-layout", "azul-layout/text_layout"]

# ICU4X internationalization support
icu = ["azul-layout", "azul-layout/icu"]
icu_chrono = ["icu", "azul-layout/icu_chrono"]

# macOS Foundation ICU backend (replaces ICU4X data blobs on macOS, ~3.3 MB savings).
# On non-macOS platforms this feature is a no-op.
icu_macos = ["azul-layout", "azul-layout/icu_macos"]

# Windows NLS ICU backend (replaces ICU4X data blobs on Windows, ~3.3 MB savings).
# On non-Windows platforms this feature is a no-op.
icu_windows = ["azul-layout", "azul-layout/icu_windows"]

# Project Fluent localization support (FTL files, language packs)
fluent = ["azul-layout", "azul-layout/fluent"]

# Icon provider support (material icons, icon packs)
icons = ["azul-layout", "azul-layout/icons"]

# HTTP client support for downloading resources
http = ["azul-layout", "azul-layout/http"]

# ZIP file manipulation support
zip_support = ["azul-layout", "azul-layout/zip_support"]

# JSON parsing and manipulation
json = ["azul-layout", "azul-layout/json"]

# JSON serialization for RefAny (enables RefAny::new_serde<T>)
# Requires T: serde::Serialize + serde::de::DeserializeOwned
serde-json = ["serde", "serde_json", "azul-core?/serde-json"]

# -----------------------------------------------------------------------------
# Logging Backends
# -----------------------------------------------------------------------------

use_fern_logger = ["logging", "fern"]
use_pyo3_logger = ["pyo3-log", "logging"]

# -----------------------------------------------------------------------------
# Predefined Configurations
# -----------------------------------------------------------------------------

# Python extension module
python-extension = ["build-dll", "pyo3", "use_pyo3_logger", "link-static"]

# PHP extension module (Zend engine native extension via ext-php-rs).
# Unlike the standard php-ffi path, this loads through the Zend engine
# and supports closure callbacks (the host-invoker pattern that all
# other managed-FFI hosts use).
# Build with:
#   cargo build --release --features php-extension
# Then load:
#   php -d extension=/path/to/libazul.so hello-world.php
php-extension = ["build-dll", "ext-php-rs", "link-static", "once_cell"]

# -----------------------------------------------------------------------------
# E2E Test Harness (AZ_E2E_TEST env-var-driven scenario runner)
# -----------------------------------------------------------------------------
# Enables the `common::e2e_test` module. At runtime, setting AZ_E2E_TEST=<json>
# replaces the normal window loop with a scripted resize/tick scenario that
# probes RSS after each batch of iterations. Used to reproduce the calc.c
# resize leak deterministically.
e2e-test = ["serde_json", "azul-layout?/probe"]

# -----------------------------------------------------------------------------
# Package Metadata
# -----------------------------------------------------------------------------

[package.metadata.deb]
maintainer = "Felix Schütt <felix.schuett@maps4print.com>"
extended-description = """
    AZUL GUI Toolkit (https://azul.rs).
    Cross-platform GUI toolkit written in Rust
    built using the WebRender rendering engine
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/libazul.so", "usr/lib/", "755"]
]

[package.metadata.docs.rs]
no-default-features = true
features = [
    "std",
    "logging",
    "all_img_formats",
    "font_loading",
    "text_layout",
    "svg",
    "xml",
    "use_fern_logger",
]
